[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="scoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_right = 70.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the 
Creeps"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="start_game" from="." to="." method="start_game"]
[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_messageTimer_timeout"]
